just going to leave the blank space because It's not as bad as the closing edit box bug lol

--- a/src/pages/Todo/todoComponent.scss
+++ b/src/pages/Todo/todoComponent.scss
@@ -7,6 +7,11 @@
   margin: 12px 0px 0px 8px;
 }
 
+.todo-complete {
+  text-decoration: line-through;
+  color: #808080;
+}
+
 .todo-slimCol {
   padding: 0;
   margin: 0;
