--- a/src/pages/Todo/todoComponent.scss
+++ b/src/pages/Todo/todoComponent.scss
@@ -1,3 +1,9 @@
+/**
+ * todoComponent.css
+ * Anthony Scinocco 200271982
+ * Custom styles pertaining to my todo list
+ */
+
 .todo-hr {
   margin: 0px 0px 2px 0px;
   padding: 0px 0px 0px 0px;
